# GPTools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  LICENSE.ms  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  format_check.yml  publish.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/advanced/: custom_scorers.rst  index.rst  integration_sklearn.rst  performance_tuning.rst
docs/api_reference/: data_influence.rst  exceptions.rst  hyperparam_tracker.rst  index.rst  model_complexity.rst  uncertainty_analysis.rst  utils.rst
docs/examples/: basic_usage.py  index.rst
docs/user_guide/: complexity_analysis.rst  data_influence.rst  gpclarity.rst  index.rst  kernel_interpretation.rst  kernel_summary.rst  optimization_tracking.rst  uncertainty_analysis.rst
examples/: basic_tutorial.py  emukit_integration.py
gpclarity/: __init__.py  data_influence.py  exceptions.py  hyperparam_tracker.py  kernel_summary.py  model_complexity.py  plotting.py  uncertainty_analysis.py  utils.py
gpdiagnostics/: __init__.py  data_influence.py  hyperparam_tracker.py  kernel_summary.py  model_complexity.py  uncertainty_analysis.py  utils.py
gptools/: __init__.py
tests/: conftest.py  test_data_influence.py  test_hyperparam_tracker.py  test_kernel_summary.py  test_model_complexity.py  test_uncertainty_analysis.py  test_utils.py
